--- a/polls/templates/polls/principal.html
+++ b/polls/templates/polls/principal.html
@@ -1,3 +1,6 @@
+{% load static %}
+{% load pwa %}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -18,7 +21,7 @@
 
 
 
-  
+    {% progressive_web_app_meta %}
     {% block title %}
 
 
