--- a/polls/templates/polls/entrar.html
+++ b/polls/templates/polls/entrar.html
@@ -24,7 +24,7 @@
             <a href="{% url 'social:begin' 'google-oauth2' %}"> Google</a>
         </button>
         <button class="btn btn-primary mb-2">
-            <a href="{% url 'social:begin' 'facebook' %}">Facebook
+            <a href="{% url 'social:begin' 'facebook' %}?next={{ request.path}}">Facebook
             </a>
         </button>
     </div>
