sin facebook, contactar administradores y verificar formularios no validos

--- a/polls/templates/polls/includes/navbar.html
+++ b/polls/templates/polls/includes/navbar.html
@@ -25,6 +25,7 @@
                     <a class="nav-link" href="/registrarse">Registrarse</a>
                     
                 {% endif %}
+                <a class="nav-link" href="https://wa.me/5493435066093">Contactar al administrador</a>
 
             </div>
         </div>
