--- a/polls/templates/polls/registrarse.html
+++ b/polls/templates/polls/registrarse.html
@@ -24,10 +24,10 @@
         <button class="btn btn-danger mb-2">
             <a href="{% url 'social:begin' 'google-oauth2' %}"> Google</a>
         </button>
-        <button class="btn btn-primary mb-2">
+        <!-- <button class="btn btn-primary mb-2">
             <a href="{% url 'social:begin' 'facebook' %}">Facebook
             </a>
-        </button>
+        </button> -->
     </div>
 </div>
 
