if post en update perfil cliente

--- a/polls/templates/polls/verificarcampos.html
+++ b/polls/templates/polls/verificarcampos.html
@@ -11,7 +11,7 @@
         style="height: 100px;">
         <p>Verifique que ingreso bien todos los campos y vuelva a intentarlo</p>
     </div>
-    <a class="btn btn-primary" href="/cargarNegocio">Intentar de nuevo</a>
+    <a class="btn btn-primary" href="/">Intentar de nuevo</a>
 </div>
 <br>
 
