cambie instagram otra opcion y agregue manual

--- a/polls/templates/polls/includes/navbar.html
+++ b/polls/templates/polls/includes/navbar.html
@@ -26,6 +26,7 @@
                     
                 {% endif %}
                 <a class="nav-link" href="https://wa.me/5493435066093">Contactar al administrador</a>
+                <a class="nav-link" href="/manual">¿Como usar la aplicación?</a>
 
             </div>
         </div>
