--- a/polls/templates/polls/manual.html
+++ b/polls/templates/polls/manual.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 <div class="container">
-    <div class="row text-center border border-5 rounded-3 d-flex align-items-center justify-content-center">
+    <div class="row border border-5 rounded-3 d-flex align-items-center justify-content-center">
         <h1>Manual de usuario</h1>
 
         <p>Por medio de la aplicación LSM Shop se pueden tener dos roles principales: usuario y cliente.</p>
