--- a/polls/templates/polls/negocio/mostrarnegocioadd.html
+++ b/polls/templates/polls/negocio/mostrarnegocioadd.html
@@ -52,7 +52,7 @@
                     {% for horario in horarios %}
                         {% if horario.diaSemana.dia == dia.dia %}
                             {% if horario.horaAbre and horario.horaCierra %}
-                                {{horario.horaAbre}} - {{horario.horaCierra}}
+                            {{horario.horaAbre|time:"G:i"}}-{{horario.horaCierra|time:"G:i"}}
                                     <a href="/updateNegociohorariodia/{{horario.id}}" class="btn btn-primary"><i
                                             class="bi bi-pencil-square"></i></a>
                                     <a href="/deleteNegociohorariodia/{{horario.id}}" class="btn btn-danger"><i
@@ -84,7 +84,7 @@
                             <a href="/process/{{data.id}}" class="btn btn-outline-danger">Pagar suscripcion</a>
                         {% endif %}
                     {% endif %}
-                    <a href="/listarNegociosCliente/" class="btn btn-outline-primary">Listo</a>
+                    <a href="/listarNegociosCliente/" class="btn btn-outline-success">Listo</a>
                     <a href="/updateNegocio/{{data.id}}" class="btn btn-primary">Modificar</a>
                     <a href="/deleteNegocio/{{data.id}}" class="btn btn-danger">Eliminar</a>
                 </div>
